--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   line_awesome_flutter: ^2.0.0
   flutter_slidable: ^2.0.0
+  flutter_js: ^0.0.3+2
 
 dev_dependencies:
   flutter_test:
