--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.1.1+2
+version: 0.1.2+3
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -47,6 +47,7 @@ dependencies:
   flutter_slidable: ^2.0.0
   web_scraper: ^0.1.4
   url_launcher: ^6.1.5
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
