--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.0+9
+version: 1.1.1+10
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -48,6 +48,7 @@ dependencies:
   web_scraper: ^0.1.4
   url_launcher: ^6.1.5
   auto_size_text: ^3.0.0
+  flutter_phoenix: ^1.1.0
 
 dev_dependencies:
   flutter_test:
