--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   auto_size_text: ^3.0.0
   flutter_phoenix: ^1.1.0
   package_info_plus: ^1.4.3+1
+  qr_code_scanner: ^1.0.1
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
