--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.0+14
+version: 1.2.0+15
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -53,6 +53,7 @@ dependencies:
   qr_flutter: ^4.0.0
   lzstring: ^2.0.0+2
   qr_code_scanner: ^1.0.1
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
