--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   url_launcher: ^6.1.5
   auto_size_text: ^3.0.0
   flutter_phoenix: ^1.1.0
-  package_info_plus: ^1.4.3+1
+  package_info_plus: ^3.0.1
   qr_flutter: ^4.0.0
   lzstring: ^2.0.0+2
   qr_code_scanner: ^1.0.1
