--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.1+16
+version: 1.3.0+17
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -49,7 +49,7 @@ dependencies:
   url_launcher: ^6.1.5
   auto_size_text: ^3.0.0
   flutter_phoenix: ^1.1.0
-  package_info_plus: ^1.4.3+1
+  package_info_plus: ^3.0.1
   qr_flutter: ^4.0.0
   lzstring: ^2.0.0+2
   qr_code_scanner: ^1.0.1
